--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -329,21 +329,21 @@ import Searchbar from "./Searchbar.astro";
                     <section class="tile menu white-box col">
                     <h2><a href="/sta" aria-label="About">Statics</a></h2>
                         <ol style="column-fill: balance;" class="course-menu statics-menu">
-                            <li><a href="/sta/introduction">Introduction</a></li>
-                            <li><a href="/sta/cartesian_coordinates">Cartesian Coordinates</a></li>
-                            <li><a href="/sta/vectors_scalars">Vectors and Scalars</a></li>
-                            <li><a href="/sta/free_body_diagrams">Free Body Diagrams</a></li>
-                            <li><a href="/sta/moments">Moments</a></li>
-                            <li><a href="/sta/force_systems">Force Systems</a></li>
-                            <li><a href="/sta/reaction_forces">Reaction Forces</a></li>
-                            <li><a href="/sta/trusses">Trusses</a></li>
-                            <li><a href="/sta/frames_and_machines">Frames and Machines</a></li>
-                            <li><a href="/sta/internal_forces">Shear Force & Bending Moment Diagrams</a></li>
-                            <li><a href="/sta/friction">Friction</a></li>
-                            <li><a href="/sta/centers_of_mass">Center of Mass</a></li>
-                            <li><a href="/sta/hydrostatic_fluid_pressure">Hydrostatic Fluid Pressure</a></li>
-                            <li><a href="/sta/moment_of_inertia">Moment Of Inertia</a></li>
-                            <li><a href="/sta/virtual_work">Virtual Work</a></li>
+                            <li><a href="/sta/introduction?origin=sidebar">Introduction</a></li>
+                            <li><a href="/sta/cartesian_coordinates?origin=sidebar">Cartesian Coordinates</a></li>
+                            <li><a href="/sta/vectors_scalars?origin=sidebar">Vectors and Scalars</a></li>
+                            <li><a href="/sta/free_body_diagrams?origin=sidebar">Free Body Diagrams</a></li>
+                            <li><a href="/sta/moments?origin=sidebar">Moments</a></li>
+                            <li><a href="/sta/force_systems?origin=sidebar">Force Systems</a></li>
+                            <li><a href="/sta/reaction_forces?origin=sidebar">Reaction Forces</a></li>
+                            <li><a href="/sta/trusses?origin=sidebar">Trusses</a></li>
+                            <li><a href="/sta/frames_and_machines?origin=sidebar">Frames and Machines</a></li>
+                            <li><a href="/sta/internal_forces?origin=sidebar">Shear Force & Bending Moment Diagrams</a></li>
+                            <li><a href="/sta/friction?origin=sidebar">Friction</a></li>
+                            <li><a href="/sta/centers_of_mass?origin=sidebar">Center of Mass</a></li>
+                            <li><a href="/sta/hydrostatic_fluid_pressure?origin=sidebar">Hydrostatic Fluid Pressure</a></li>
+                            <li><a href="/sta/moment_of_inertia?origin=sidebar">Moment Of Inertia</a></li>
+                            <li><a href="/sta/virtual_work?origin=sidebar">Virtual Work</a></li>
                         </ol>
                     </section>
                 </div>
@@ -357,14 +357,14 @@ import Searchbar from "./Searchbar.astro";
                         <section class="tile menu white-box col">
                             <h2><a href="/dyn" aria-label="About">Dynamics</a></h2>
                                 <ol style="column-fill: balance-all;" class="course-menu dynamics-menu">
-                                    <li><a href="/dyn/vectors">Vectors</a></li>
-                                    <li><a href="/dyn/vector_calculus">Vector Calculus</a></li>
-                                    <li><a href="/dyn/particle_kinematics">Particle Kinematics</a></li>
-                                    <li><a href="/dyn/particle_kinetics">Particle Kinetics</a></li>
-                                    <li><a href="/dyn/rigid_body_kinematics" style="break-inside: avoid;">Rigid Body Kinematics</a></li>
-                                    <li><a href="/dyn/rigid_body_kinetics">Rigid Body Kinetics</a></li>
-                                    <li><a href="/dyn/contact_and_rolling">Contact And Rolling</a></li>
-                                    <li><a href="/dyn/work_and_energy">Work And Energy</a></li>
+                                    <li><a href="/dyn/vectors?origin=sidebar">Vectors</a></li>
+                                    <li><a href="/dyn/vector_calculus?origin=sidebar">Vector Calculus</a></li>
+                                    <li><a href="/dyn/particle_kinematics?origin=sidebar">Particle Kinematics</a></li>
+                                    <li><a href="/dyn/particle_kinetics?origin=sidebar">Particle Kinetics</a></li>
+                                    <li><a href="/dyn/rigid_body_kinematics?origin=sidebar" style="break-inside: avoid;">Rigid Body Kinematics</a></li>
+                                    <li><a href="/dyn/rigid_body_kinetics?origin=sidebar">Rigid Body Kinetics</a></li>
+                                    <li><a href="/dyn/contact_and_rolling?origin=sidebar">Contact And Rolling</a></li>
+                                    <li><a href="/dyn/work_and_energy?origin=sidebar">Work And Energy</a></li>
                                 </ol>
                         </section>
                     </div>
@@ -379,20 +379,20 @@ import Searchbar from "./Searchbar.astro";
                         <section class="tile menu white-box col">
                             <h2><a href="/sol" aria-label="About">Solid Mechanics</a></h2>
                                 <ol style="column-fill: balance;" class="course-menu solids-menu">
-                                    <li><a href="/sol/stress">Stress</a></li>
-                                    <li><a href="/sol/strain">Strain</a></li>
-                                    <li><a href="/sol/material_properties">Material Properties</a></li>
-                                    <li><a href="/sol/axial_loading">Axial Loading</a></li>
-                                    <li><a href="/sol/torsion">Torsion</a></li>
-                                    <li><a href="/sol/shear_moment_diagrams">Shear Moment Diagrams</a></li>
-                                    <li><a href="/sol/bending">Bending</a></li>
-                                    <li><a href="/sol/transverse_shear">Transverse Shear</a></li>
-                                    <li><a href="/sol/pressure_vessels">Pressure Vessels</a></li>
-                                    <li><a href="/sol/combined_loading">Combined Loading</a></li>
-                                    <li><a href="/sol/stress_transformation">Stress Transformation</a></li>
-                                    <li><a href="/sol/failure_theories">Failure Theories</a></li>
-                                    <li><a href="/sol/beam_deflection">Beam Deflection</a></li>
-                                    <li><a href="/sol/buckling">Buckling</a></li>
+                                    <li><a href="/sol/stress?origin=sidebar">Stress</a></li>
+                                    <li><a href="/sol/strain?origin=sidebar">Strain</a></li>
+                                    <li><a href="/sol/material_properties?origin=sidebar">Material Properties</a></li>
+                                    <li><a href="/sol/axial_loading?origin=sidebar">Axial Loading</a></li>
+                                    <li><a href="/sol/torsion?origin=sidebar">Torsion</a></li>
+                                    <li><a href="/sol/shear_moment_diagrams?origin=sidebar">Shear Moment Diagrams</a></li>
+                                    <li><a href="/sol/bending?origin=sidebar">Bending</a></li>
+                                    <li><a href="/sol/transverse_shear?origin=sidebar">Transverse Shear</a></li>
+                                    <li><a href="/sol/pressure_vessels?origin=sidebar">Pressure Vessels</a></li>
+                                    <li><a href="/sol/combined_loading?origin=sidebar">Combined Loading</a></li>
+                                    <li><a href="/sol/stress_transformation?origin=sidebar">Stress Transformation</a></li>
+                                    <li><a href="/sol/failure_theories?origin=sidebar">Failure Theories</a></li>
+                                    <li><a href="/sol/beam_deflection?origin=sidebar">Beam Deflection</a></li>
+                                    <li><a href="/sol/buckling?origin=sidebar">Buckling</a></li>
                                 </ol>
                         </section>
                     </div>
