--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -113,25 +113,55 @@ import CustomCanvas from "../../components/CustomCanvas.astro"
     </Col>
     <Col values="0 md-2 lg-3 xl-4"></Col>
   </Row>
+  <p></p>
+  <div class="w-100" id="anim-container">
+    <canvas id="stt-mc-c" height="500" width="500" style="background: white;"></canvas>
 
-  <PrairieDrawCanvas id="stt-mc-c" height="500" width="500">
-    <Row> 
-      <Col values="12">
-        <div class="d-flex  align-items-baseline">
-            <p class="m-0 flex-shrink-1">Angle:</p>
-            <div class="flex-grow-1 d-flex align-items-baseline">
-                <input type="range" min="-90" max="90" value="0" step="1" class="data-input:stt-cb-c:theta flex-grow-1 mx-2" onchange="stt_cb_c.setOption('theta', this.value); stt_mc_c.setOption('theta', this.value); document.querySelector('span[class*=theta]').innerText = this.value;" oninput="stt_cb_c.setOption('theta', this.value); stt_mc_c.setOption('theta', this.value); document.querySelector('span[class*=theta]').innerText = this.value;"/>
-                    \(\theta = \; \) <span class="data-option:avb-fp-c:theta">0</span>\(^\circ\)
-            </div>
-        </div>
-      </Col>
-    </Row>
-  </PrairieDrawCanvas>
+    <canvas id="stt-cb-c" height="500" width="500" style="background: white;"></canvas>
+  </div>
+  
+
+  <Row> 
+    <Col values="12">
+      <div class="d-flex  align-items-baseline">
+          <p class="m-0 flex-shrink-1">Angle:</p>
+          <div class="flex-grow-1 d-flex align-items-baseline">
+              <input type="range" min="-90" max="90" value="0" step="1" class="data-input:stt-cb-c:theta flex-grow-1 mx-2" onchange="stt_cb_c.setOption('theta', this.value); stt_mc_c.setOption('theta', this.value); document.querySelector('span[class*=theta]').innerText = this.value;" oninput="stt_cb_c.setOption('theta', this.value); stt_mc_c.setOption('theta', this.value); document.querySelector('span[class*=theta]').innerText = this.value;"/>
+                  \(\theta = \; \) <span class="data-option:avb-fp-c:theta">0</span>\(^\circ\)
+          </div>
+      </div>
+    </Col>
+  </Row>
+
+  <script is:inline>
+    const container = document.querySelector("#anim-container");
+    const cb = document.querySelector("#stt-cb-c");
+    const mc = document.querySelector("#stt-mc-c");
+
+    function resize_anim_container(){
+      var container_width = container.clientWidth;
+      cb.width = Math.round(container_width/2)-4;
+      cb.height = Math.round(container_width/2)-4;
+      mc.width = Math.round(container_width/2)-4;
+      mc.height = Math.round(container_width/2)-4;
+    }
+
+    resize_anim_container();
+
+    window.addEventListener("resize", function(){
+      resize_anim_container();
+
+      stt_mc_c.redraw();
+      stt_cb_c.redraw();
+    })
+  </script>
+
+  
   <script is:inline>
     $(document).ready(function() {
     
         stt_mc_c = new PrairieDraw("stt-mc-c", function() {
-          this.setUnits(6, 6);
+          this.setUnits(5, 5);
           
           this.addOption("theta", 0)
           this.addOption('sx', 10);
@@ -146,22 +176,15 @@ import CustomCanvas from "../../components/CustomCanvas.astro"
 
           var theta = Math.PI/180*this.getOption('theta');
 
-
-
-          console.log(theta_p);
-
           var savg = (sx+sy)/2;
           var R = Math.sqrt((sx-sy)**2/4 + tau**2);
-          var radius = 2.5;
+          var radius = 2;
           var O = $V([0, 0]);
           
-          console.log(sx)
-          console.log(savg)
-
-          this.circle(O, 2.5, false)
+          this.circle(O, radius, false)
           this.line($V([(sx-savg)/R*radius, -tau/R*radius]), $V([(sy-savg)/R*radius, tau/R*radius]));
-          this.text($V([(sx-savg)/R*radius, -tau/R*radius]), $V([-2, 2]), `(${sx}, ${tau})`);
-          this.text($V([(sy-savg)/R*radius, tau/R*radius]), $V([2, -2]), `(${sy}, ${-tau})`);
+          this.text($V([(sx-savg)/R*radius, -tau/R*radius]), $V([-2, 2]), `X (${sx}, ${tau})`);
+          this.text($V([(sy-savg)/R*radius, tau/R*radius]), $V([2, -2]), `Y (${sy}, ${-tau})`);
           this.text(O, $V([2, -2]), `(${savg}, ${0})`);
 
           this.line($V([-3, 0]), $V([3, 0]))
@@ -186,7 +209,7 @@ import CustomCanvas from "../../components/CustomCanvas.astro"
           var txpyp = -(sx-sy)/2*Math.sin(current_angle)+tau*Math.cos(current_angle);
           
           document.querySelector("span#sigma_xp").innerText = Math.round((sxp)*100)/100;
-          document.querySelector("span#sigma_yp").innerText = Math.round((tau)*100)/100;
+          document.querySelector("span#sigma_yp").innerText = Math.round((syp)*100)/100;
           document.querySelector("span#tau_xpyp").innerText = Math.round((txpyp)*100)/100;
 
           var sigma = Math.round((savg+R*Math.cos(theta_p+2*theta))*1000)/1000;
@@ -195,15 +218,11 @@ import CustomCanvas from "../../components/CustomCanvas.astro"
     });
     </script>
 
-<PrairieDrawCanvas id="stt-cb-c" height="333" width="500">
-  
-</PrairieDrawCanvas>
-
 <script is:inline>
   $(document).ready(function() {
   
       stt_cb_c = new PrairieDraw("stt-cb-c", function() {
-        this.setUnits(6, 4);
+        this.setUnits(4, 4);
   
         this.addOption("theta", 0)
   
