--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -83,6 +83,26 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 
 <Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
 
+<table border="1">
+    <tr>
+        <th><b>Diagram</b></th>
+        <th><b>Jumps</b></th>
+        <th><b>Slope</b></th>
+        <th><b>Overall change</b></th>
+    </tr>
+    <tr>
+        <td>Row 1, Cell 1</td>
+        <td>Row 1, Cell 2</td>
+        <td>Row 1, Cell 3</td>
+        <td>Row 1, Cell 4</td>
+    </tr>
+    <tr>
+        <td>Row 2, Cell 1</td>
+        <td>Row 2, Cell 2</td>
+        <td>Row 2, Cell 3</td>
+        <td>Row 2, Cell 4</td>
+    </tr>
+</table>
 
 </SubSection>
 
