--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -20,6 +20,27 @@ import Item from "../../components/Item.astro"
           <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General Rules</a></li>
       </ul>
       </div>
+
+
+<style>
+    tr {
+        border: solid 0px var(--bs-border-color); 
+    }
+    td {
+        border-right: solid 1px var(--bs-border-color); 
+        border-left: solid 1px var(--bs-border-color);
+        text-align:center;
+        padding-top: .5em;
+        padding-bottom: .5em;
+    }
+
+    th{
+        border-right: solid 1px var(--bs-border-color); 
+        border-left: solid 1px var(--bs-border-color);
+        text-align:center;
+    }
+</style>
+
 <Section title="Shear Force & Bending Moment Diagrams" id="internal_forces">
 <p>
 Internal forces of a member can be determined by creating an imaginary cut in a member, and then solving for the internal shear force, normal force, and bending moment (which, after the cut, become "external" forces that can be solved for). 
@@ -83,26 +104,91 @@ The general procedures for creating shear / bending moment diagrams are:</p>
 
 <Image src='/Statics/IntForceFigures/IntDerivRelationships.jpg' width='5'>Relationships between \(w(x)\), \(V\), and \(M\).</Image>
 
-<table border="1">
-    <tr>
-        <th><b>Diagram</b></th>
-        <th><b>Jumps</b></th>
-        <th><b>Slope</b></th>
-        <th><b>Overall change</b></th>
-    </tr>
-    <tr>
-        <td>Row 1, Cell 1</td>
-        <td>Row 1, Cell 2</td>
-        <td>Row 1, Cell 3</td>
-        <td>Row 1, Cell 4</td>
-    </tr>
-    <tr>
-        <td>Row 2, Cell 1</td>
-        <td>Row 2, Cell 2</td>
-        <td>Row 2, Cell 3</td>
-        <td>Row 2, Cell 4</td>
-    </tr>
-</table>
+<DisplayTable id="moi_table">
+    <thead>
+        <tr>
+            <th class="nosideborderleft">
+                
+            </th>
+            <th>
+                <strong>Diagram</strong>
+            </th>
+            <th> 
+                <strong>Jumps</strong>
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Other names</strong>
+            </td>
+            <td>
+
+            </td>
+            <td class="table-shaded">
+                Second moment of area
+            </td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Description</strong>
+            </td>
+            <td>
+                Determines the torque needed to produce a desired angular rotation about an axis of rotation (resistance to rotation)
+            </td>
+            <td class="table-shaded">
+                Determines the moment needed to produce a desired curvature about an axis(resistance to bending)
+            </td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Equations</strong>
+            </td>
+            <td>
+                <DisplayEquation equation='I_{P,\\hat{a}} = \\iiint_\\mathcal{B} \\rho r^2 \\,dV\\' /> 
+            </td>
+            <td class="table-shaded">
+                <DisplayEquation equation='I_x = \\int_{A}^{} y^2 \\,dA \\' />
+                <DisplayEquation equation='I_y = \\int_{A}^{} x^2 \\,dA \\' />
+                <DisplayEquation equation='\\begin{aligned} J_O &= \\int_{A}^{} r^2 \\,dA \\\\ &= \\int_{A}^{} (x^2+y^2) \\,dA\\ \\end{aligned}' />
+            </td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Units</strong> 
+            </td>
+            <td>
+                <InlineEquation equation="length*mass^2"/>
+            </td>
+            <td class="table-shaded">
+                <InlineEquation equation="length^4"/>
+            </td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Typical Equations</strong>
+            </td>
+            <td>
+                <DisplayEquation equation='\\tau = I\\alpha' /> 
+            </td>
+            <td class="table-shaded">
+                <DisplayEquation equation='\\sigma = (My)/I \\' />
+            </td>
+        </tr>
+        <tr>
+            <td class="nosideborderleft">
+                <strong>Courses</strong>
+            </td>
+            <td>
+                TAM 212
+            </td>
+            <td class="table-shaded">
+                TAM 210, TAM 251
+            </td>
+        </tr>
+    </tbody>
+</DisplayTable>
 
 </SubSection>
 
