--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -10,6 +10,7 @@ import Enumerate from "../../components/Enumerate.astro"
 import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import Item from "../../components/Item.astro"
+import DisplayTable from "../../components/DisplayTable.astro"
 ---
 <Layout title="Shear Force & Bending Moment Diagrams">
 
