--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -10,6 +10,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 import InlineEquation from "../../components/InlineEquation.astro"
 import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
+import Example from "../../components/Example.astro"
 ---
 
 <style>
@@ -41,6 +42,10 @@ Friction is a force that resists the movement of two contacting surfaces sliding
 </Section>
 
 <SubSection title="Static Friction" id="static_friction">
+
+In TAM 210/211, we will focus on dry friction. Dry friction occurs between two surfaces with <strong>no</strong> lubricating fluid between them. 
+
+Static friction is the friction between two bodies when there is no movement between them.
 
 Examples of coefficients of static friction: 
 
@@ -80,10 +85,6 @@ Examples of coefficients of static friction:
 
 <!--This might be a good place to add practical examples - maybe how engine brakes use friction? And another thing about how cartilage in your joints has very little friction (like ice on ice!) which allows for joint movement.-->
 
-In TAM 210/211, we will focus on dry friction. Dry friction occurs between two surfaces with <strong>no</strong> lubricating fluid between them. 
-
-Static friction is the friction between two bodies when there is no movement between them.
-
     <CalloutContainer slot="cards">
         <CalloutCard title="Did you know?">
             <p>
@@ -111,7 +112,24 @@ To solve for X (the location of the normal force), one can write the equations o
 </p>
 <!-- From Lecture 27 -->
 
-<Image src='/Statics/FrictionFigures/NLocation.jpg' width='4'>Note explanation</Image>
+     <Example title="Location of normal force" id="vcc-dvf">
+
+	<Image src='/Statics/FrictionFigures/NLocation.jpg' width='4'>Note explanation</Image>
+
+        <p>
+          If the normal force <i>N</i> acted at the middle of the box (at the center of mass), we would write the three equations of equilibrium as follows: 
+	</p>
+          <DisplayEquation equation="\\sum{\\F_y} = P - \\{F_f} = 0" />
+	  <DisplayEquation equation="\\sum{\\F_y} = P - \\{F_f} = 0" />
+	  <DisplayEquation equation="\\sum{\\F_y} = P - \\{F_f} = 0" />
+	<p>
+	However, The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
+
+        </p>
+
+      </Example>
+
+
 </SubSection>
 
 </Layout>
