--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -112,7 +112,7 @@ To solve for X (the location of the normal force), one can write the equations o
 </p>
 <!-- From Lecture 27 -->
 
-     <Example title="Location of normal force" id="vcc-dvf">
+     <Example title="Location of normal force">
 
 	<Image src='/Statics/FrictionFigures/NLocation.jpg' width='5'></Image>
 
