--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -119,9 +119,9 @@ To solve for X (the location of the normal force), one can write the equations o
         <p>
           If the normal force <i>N</i> acted at the middle of the box (at the center of mass), we would write the three equations of equilibrium as follows: 
 	</p>
-          <DisplayEquation equation="\\sum F_y = P - F_f = 0" />
-	  <DisplayEquation equation="\\sum F_y = P - F_f = 0" />
-	  <DisplayEquation equation="\\\sum F_y = P - F_f = 0" />
+          <DisplayEquation equation="\\sum F_x = P - F_f = 0" />
+	  <DisplayEquation equation="\\sum F_y = N - W = 0" />
+	  <DisplayEquation equation="\\\sum M_O = -Py = 0" />
 	<p>
 	However, The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
 
