--- a/src/pages/sta/friction.astro
+++ b/src/pages/sta/friction.astro
@@ -121,9 +121,15 @@ To solve for X (the location of the normal force), one can write the equations o
 	</p>
           <DisplayEquation equation="\\sum F_x = P - F_f = 0" />
 	  <DisplayEquation equation="\\sum F_y = N - W = 0" />
-	  <DisplayEquation equation="\\\sum M_O = -Py = 0" />
+	
 	<p>
-	However, The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
+          So far, so good! However, we run into a problem when we write the sum of moments equation:  
+	</p>
+
+	  <DisplayEquation equation="\\\sum M_O = -Py = 0" />
+
+	<p>
+	The sum of moments equation about point O results in an expression that is not possible: we know that <i>P</> cannot be zero, so there must be some sort of moment about the center of the box from the normal force acting offset from the center of mass of the box. 
 
         </p>
 
