dark mode footer + mohrs overvlow

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -47,6 +47,7 @@
     footer .il-footer-contact p {
         margin-bottom: 0;
         line-height: 1.5;
+        color: black;
     }
 
     .hide-empty[data-value=""]{
@@ -226,7 +227,7 @@
                     <div class="site-footer-content">
                         <div class="row">
                             <div class="il-footer-column col-12 col-md mb-5 mb-md-0 hide-empty" data-value="480">
-                                <h2>Learn More</h2>
+                                <h2 class="text-black">Learn More</h2>
                             <ul>
                             <li><a href="https://mechse.illinois.edu/about" aria-label="About Us">About Us</a></li>
                             <li><a href="https://mechse.illinois.edu/people/offices" aria-label="Directory of Offices">Directory of Offices</a></li>
