--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -392,7 +392,7 @@ import Searchbar from "./Searchbar.astro";
                                     <li><a href="/sol/stress_transformation?origin=sidebar">Stress Transformation</a></li>
                                     <li><a href="/sol/failure_theories?origin=sidebar">Failure Theories</a></li>
                                     <li><a href="/sol/beam_deflection?origin=sidebar">Beam Deflection</a></li>
-                                    <li><a href="/sol/buckling?origin=sidebar">Buckling</a></li>
+                                    <li><a href="/sol/buckling?origin=sidebargit ">Buckling</a></li>
                                 </ol>
                         </section>
                     </div>
